| Summary: | ASTERISK-19096: Allow specifying which MixMonitor to stop | ||
| Reporter: | Sergio González Martín (telecos82) | Labels: | |
| Date Opened: | 2011-12-22 04:27:52.000-0600 | Date Closed: | 2012-01-23 12:26:01.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_mixmonitor |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currently, if there are several MixMonitor started on a channel, there is no way to specify which MixMonitor to stop with StopMixMonitor. With this patch we will allow this. | ||
| Comments: | |||